--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "your_site_url_address"
+baseurl = "https://determined-yalow-f42986.netlify.com/"
 languageCode = "en"
 title = "Manos Antoniou"
 theme = "hugo-theme-cactus-plus"
