--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
 # Site settings
-baseurl = "https://manosantoniou.netlify.com/"
+baseurl = "http://manosantoniou.com/"
 languageCode = "en"
 title = "Manos Antoniou"
 theme = "hugo-theme-cactus-plus"
-googleAnalytics = "your_google_analytics_id"
+googleAnalytics = "UA-116714552-1"
 # Set the value to true if your site include CJK (Chinese, Japanese, and Korean languages) characters
 hasCJKLanguage = false
 
