--- a/themes/hugo-theme-cactus-plus/theme.toml
+++ b/themes/hugo-theme-cactus-plus/theme.toml
@@ -5,7 +5,7 @@ description = "A minimalistic and responsive theme for bloggers."
 homepage = "https://github.com/nodejh/hugo-theme-cactus-plus"
 tags = ["blog", "beautiful", "disqus", "rss", "syntax highlighting", "tags"]
 features = ["blog", "beautiful", "disqus", "rss", "syntax highlighting", "tags"]
-min_version = 0.20
+min_version = "0.20"
 
 [author]
   name = "nodejh"
