--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "http://manosantoniou.com/"
+baseurl = "https://www.manosantoniou.com/"
 languageCode = "en"
 title = "Manos Antoniou"
 theme = "hugo-theme-cactus-plus"
