--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # Site settings
-baseurl = "https://clever-edison-73ae9c.netlify.app"
+baseurl = "https://manosantoniou.com"
+#baseurl = "https://clever-edison-73ae9c.netlify.app"
 languageCode = "en"
 title = "Manos Antoniou"
 theme = "hugo-theme-cactus-plus"
