--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://manosantoniou.com"
+baseurl = https://manosantoniou.com
 #baseurl = "https://clever-edison-73ae9c.netlify.app"
 languageCode = "en"
 title = "Manos Antoniou"
